--- a/client/index.tpl.html
+++ b/client/index.tpl.html
@@ -5,9 +5,12 @@
             Voting-App!
         </title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <style>
+
+        </style>
     </head>
 
-    <body>
+    <body style="background-color: #ededed">
         <div id="app"></div>
     </body>
 </html>
