--- a/client/index.tpl.html
+++ b/client/index.tpl.html
@@ -10,7 +10,7 @@
         </style>
     </head>
 
-    <body style="background-color: #ededed">
+    <body style="background-color: #FFFFFF">
         <div id="app"></div>
     </body>
 </html>
