--- a/client/index.tpl.html
+++ b/client/index.tpl.html
@@ -11,6 +11,6 @@
     </head>
 
     <body style="background-color: #FFFFFF">
-        <div id="app"></div>
+        <div id="voting-app"></div>
     </body>
 </html>
